k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: us-west1-docker.pkg.dev/cs144-25s-genekung-458805/team22/backend:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: secret-volume
              mountPath: /secrets
              readOnly: true
      volumes:
        - name: secret-volume
          secret:
            secretName: backend-secrets
